--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href='./favicon.ico' />
-    <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
-    <!-- <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"> -->
-    <!-- <link rel="icon" type="image/png" href="favicon.ico"> -->
+    <meta property="og:title" content="Danny Regan - Front End Developer">
+    <meta property="og:description" content="Danny's personal website.">
+    <meta property="og:image" content="./favicon.ico">
+    <meta property="og:url" content="https://dreegs.com/">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
