--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <link rel="'stylesheet" href="../src/App.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
