--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href='./favicon.ico' />
-    <meta property="og:title" content="Danny Regan - Front End Developer">
+    <meta property="og:title" content="Danny Regan - Software Engineer">
     <meta property="og:description" content="Danny's personal website.">
-    <meta property="og:image" content="./favicon.ico">
-    <meta property="og:url" content="https://dreegs.com/">
+    <meta property="og:image" content="./Hero3.JPG">
+    <meta property="og:url" content="dreegs.com">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -14,7 +14,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="Hero3.JPG" />
     <link rel="'stylesheet" href="../src/App.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
