insert absolute URL into og:image content

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href='./favicon.ico' />
     <meta property="og:title" content="Danny Regan - Software Engineer">
     <meta property="og:description" content="Danny's personal website.">
-    <meta property="og:image" content="./Hero3.JPG">
+    <meta property="og:image" content="https://github.com/dannyregan/dreegs/blob/main/public/Hero3.JPG?raw=true">
     <meta property="og:url" content="dreegs.com">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
